--- a/src/components/BunAddedInConstructor/bunAddedInConstructor.module.css
+++ b/src/components/BunAddedInConstructor/bunAddedInConstructor.module.css
@@ -1,5 +1,3 @@
-
-
 .listItem {
     display: flex;
     min-width: 536px;
@@ -8,6 +6,9 @@
     padding: 0;
     justify-content: space-between;
     margin-right: 10px;
+    padding-left: 50px;
+    margin-top: 16px;
+    margin-bottom: 16px;
 }
 
 .productItem {
@@ -21,8 +22,8 @@
 }
 
 .image {
-    width: 80px;
     display: block;
+    width: 80px;
 }
 
 .name {
