--- a/src/components/BurgerConstructor/burgerConstructor.module.css
+++ b/src/components/BurgerConstructor/burgerConstructor.module.css
@@ -10,9 +10,7 @@
     flex-direction: column;
     margin: 0;
     padding: 0;
-    row-gap: 16px;
     max-height: 910px;
-    overflow-y: auto; 
     margin-bottom: 40px;
 }
 
@@ -32,5 +30,12 @@
     margin-left: auto;
     padding-right: 10px;
     align-items: center;
+}
+
+.innerIngredients {
+    overflow-y: auto; 
+    row-gap: 16px;
+    display: flex;
+    flex-direction: column;
 }
 
