loadings and errors handlers

--- a/src/pages/styles/pages.module.css
+++ b/src/pages/styles/pages.module.css
@@ -42,3 +42,12 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.statusMessage {
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.statusMessage.visible {
+  opacity: 1;
+}
