--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -2,8 +2,8 @@
 .product {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    column-gap: 24px;
-    row-gap: 32px;
+    column-gap: 0;
+    row-gap: 15px;
 }
 
 .productItem {
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: column;
     row-gap: 8px;
+    padding: 8px 6px;
 }
 
 .image {
