--- a/src/components/BurgerConstructor/BurgerConstructor.module.css
+++ b/src/components/BurgerConstructor/BurgerConstructor.module.css
@@ -39,16 +39,24 @@
     margin-bottom: 20px;
 }
 
-.placeholder {
-    height: 50px; /* Adjust based on your design */
-    margin: 10px 0;
-    background-color: rgba(0, 0, 0, 0.1); /* Light background for the placeholder */
-    border: 2px dashed rgba(0, 0, 0, 0.2); /* Dashed border */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: rgba(0, 0, 0, 0.5); /* Placeholder text color */
-    font-style: italic;
-  }
-  
+.targetitem {
+    min-height: 50px;
+    padding: 10px;
+    margin-bottom: 20px;
+}
 
+.targetitem.hovered {
+    position: relative;
+}
+
+.targetitem.hovered::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    pointer-events: none; 
+    border-radius: 10%;
+  }
