--- a/src/components/BurgerConstructor/BurgerConstructor.module.css
+++ b/src/components/BurgerConstructor/BurgerConstructor.module.css
@@ -1,63 +1,69 @@
 .wrapper {
-    width: 600px;
-    margin-top: 100px;
-    padding-left: 16px;
-    padding-bottom: 50px;
+  width: 600px;
+  margin-top: 100px;
+  padding-left: 16px;
+  padding-bottom: 50px;
 }
 
 .list {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .listItem {
-    display: flex;
-    column-gap: 13px;
+  display: flex;
+  column-gap: 13px;
 }
 
 .finalPrice {
-    width: 600px;
-    display: flex;
+  width: 600px;
+  display: flex;
 }
 
 .finalPriceWrapper {
-    display: flex;
-    column-gap: 40px;
-    margin-left: auto;
-    padding-right: 10px;
-    align-items: center;
+  display: flex;
+  column-gap: 40px;
+  margin-left: auto;
+  padding-right: 10px;
+  align-items: center;
 }
 
 .innerIngredients {
-    overflow-y: auto; 
-    row-gap: 16px;
-    display: flex;
-    flex-direction: column;
+  overflow-y: auto;
+  row-gap: 16px;
+  display: flex;
+  flex-direction: column;
 }
 
 .item {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .targetitem {
-    min-height: 50px;
-    padding: 10px;
-    margin-bottom: 20px;
-    position: static;
+  min-height: 50px;
+  padding: 10px;
+  margin-bottom: 20px;
+  position: static;
 }
 
 .targetitem.hovered {
-    position: relative;
+  position: relative;
 }
 
 .targetitem.hovered::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    pointer-events: none; 
-    border-radius: 10%;
-  }
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  pointer-events: none;
+  border-radius: 10%;
+}
+
+.currency_wrapper {
+    display: flex;
+    align-items: center;
+    column-gap: 5px;
+}
