--- a/src/pages/styles/order-feed.module.css
+++ b/src/pages/styles/order-feed.module.css
@@ -1,8 +1,9 @@
 .feed_section {
-    width: 1170px;
+    width: 1270px;
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
+    margin-top: 50px;
 }
 
 .feed_section_list {
