modified constructor usability and styles

--- a/src/components/BurgerConstructor/BurgerConstructor.module.css
+++ b/src/components/BurgerConstructor/BurgerConstructor.module.css
@@ -44,6 +44,13 @@
   padding: 10px;
   margin-bottom: 20px;
   position: static;
+  max-height: 48vh;
+}
+
+.content_wrapper{
+  overflow-y: auto;
+  max-height: 48vh;
+  padding-right: 15px;
 }
 
 .targetitem.hovered {
@@ -56,7 +63,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
   pointer-events: none;
   border-radius: 10%;
@@ -66,4 +73,22 @@
     display: flex;
     align-items: center;
     column-gap: 5px;
+}
+
+@keyframes float {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-20px);
+  }
+}
+
+.alert {
+  animation: float 2s linear infinite;
+}
+
+.alerts_wrapper {
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
